# ucf_utilities

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindUCFUtilities.cmake
include/ucf_utilities/: byte_buffer.h  i2c_interface.h
src/: byte_buffer.cpp  i2c_interface.cpp
